# image-converter

./: .gitignore  README.md  TESTING.md  image-pipeline.spec  main.py  pyproject.toml
.github/workflows/: README.md  ci.yml
src/image_pipeline/: __init__.py  constants.py  types.py
src/image_pipeline/cli/: __init__.py  cli.py  color_space_registry.py  filter_parser.py  filter_registry.py  options_parser.py
src/image_pipeline/color/: __init__.py  chromaticities.py  conversion.py  matrices.py
src/image_pipeline/core/: __init__.py  filter_pipeline.py  image_data.py  processor.py
src/image_pipeline/filters/: TODO_BRIGHTNESS_FILTERS.md  __init__.py  absolute_luminance.py  base.py  blur.py  color_convert.py  dequantize.py  grayscale.py  normalize.py  pq_decode.py  pq_encode.py  quantize.py  relative_luminance.py  remove_alpha.py  sharpen.py  srgb_decode.py  srgb_encode.py  tonemap.py
src/image_pipeline/io/: __init__.py  reader.py  saver.py  writer.py
src/image_pipeline/io/formats/: __init__.py  base.py
src/image_pipeline/io/formats/avif/: __init__.py  adapter.py  options.py  reader.py  writer.py
src/image_pipeline/io/formats/exr/: __init__.py  metadata.py  options.py  reader.py  writer.py
src/image_pipeline/io/formats/jpeg/: __init__.py  options.py  reader.py  writer.py
src/image_pipeline/io/formats/jpeg/ultrahdr/: __init__.py  reader.py  writer.py
src/image_pipeline/io/formats/jxr/: __init__.py  options.py  reader.py  writer.py
src/image_pipeline/io/formats/png/: __init__.py  options.py  reader.py  writer.py
src/image_pipeline/io/formats/tiff/: __init__.py  options.py  reader.py  writer.py
src/image_pipeline/io/formats/webp/: __init__.py  options.py  reader.py  writer.py
src/image_pipeline/metadata/: __init__.py  base.py  codec_base.py  manager.py  png_adapter.py  png_codec.py  png_metadata_writer.py
src/image_pipeline/metadata/png/: __init__.py  adapter.py  codec.py  writer.py
tests/: README.md  conftest.py
tests/unit/test_cli/: test_parsers.py
tests/unit/test_core/: test_filter_pipeline.py  test_image_data.py
tests/unit/test_filters/: __init__.py  test_blur.py  test_color_convert.py  test_grayscale.py  test_luminance.py  test_normalize.py  test_pq_encode_decode.py  test_quantize_dequantize.py  test_remove_alpha.py  test_sharpen.py  test_srgb_encode_decode.py
tests/unit/test_io/: README.md  test_avif_io.py  test_exr_io.py  test_io_facades.py  test_jpeg_io.py  test_jxr_io.py  test_options_adapters.py  test_png_io.py  test_tiff_io.py  test_webp_io.py
