[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_pipeline"
version = "0.1.0"
description = "HDR / 16-bit PNG / AVIF image processing pipeline with filters"
authors = [
    { name="Dima Teterin", email="tet.dima.211@gmail.com" }
]
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "numpy",
    "tifffile",
    "scipy",
    "ImageIO",
    "imageio[pillow]",
    "pypng",
    "imagecodecs"
]

[project.optional-dependencies]
dev = [
    "pyright"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "venv", "build", "dist"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true
