[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "image_pipeline"
version = "0.1.0"
description = "HDR / 16-bit PNG / AVIF image processing pipeline with filters"
authors = [
    { name="Dima Teterin", email="tet.dima.211@gmail.com" }
]
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.12"
dependencies = [
    "pillow",
    "numpy",
    "tifffile",
    "scipy",
    "pypng",
    "imagecodecs",
    "OpenEXR>=3.4.0"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pyinstaller>=6.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]
exclude = ["**/__pycache__", "venv", "build", "dist"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedVariable = true
reportDuplicateImport = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Raise error on unknown markers
    "--tb=short",           # Shorter traceback format
    "--color=yes",          # Colored output
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "error",                # Convert warnings to errors by default
    "ignore::UserWarning",  # Except UserWarnings (like our PQ reference_peak warnings)
]
